@@ -9,6 +9,7 @@ Version 2.6.0
   - Note: P-cal base frequency is not yet supported in .input file
 * ANTENNA parameter polConvert can be set to true to indicate desire to perform polarization basis conversion on this antenna.  This will eliminate a warning that is not needed in this case.
 * Added parameter exahustiveAutocorrs to allow correlation of cross-hand autocorrelations when polarisations are in different datastreams
+* Support units in the clock rate (e.g., usec/sec).  This change generalizes unit support to allow time in numerators.
 
 Version 2.5.0
 ~~~~~~~~~~~~~
